add ts node and typescript

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "diamond-aws-store",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
+  "scripts": {`n    "prisma": { "seed": "ts-node prisma/seed.ts" },
     "dev": "next dev",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -23,7 +24,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "postcss": "^8.5.6",
+    "prisma": "^6.16.2",
     "tailwindcss": "^4.1.13",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
