fix package json and prisma setup

--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
   "name": "diamond-aws-store",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {`n    "prisma": { "seed": "ts-node prisma/seed.ts" },`n    "prisma": { "seed": "ts-node prisma/seed.ts" },
-    "dev": "next dev",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node test.ts",
+    "prisma": "prisma"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.2",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "@prisma/client": "^6.16.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.3",
-    "postcss": "^8.5.6",
-    "prisma": "^6.16.2",
-    "tailwindcss": "^4.1.13",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.3.3",
+    "prisma": "^6.16.2"
   }
 }
