--- a/package.json
+++ b/package.json
@@ -4,15 +4,27 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node test.ts",
-    "prisma": "prisma"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "test": "ts-node test.ts",
+    "prisma": "prisma",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.2"
+    "@prisma/client": "^6.16.2",
+    "next": "^15.5.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/react": "19.1.15",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "prisma": "^6.16.2",
+    "tailwindcss": "^4.1.13",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "prisma": "^6.16.2"
+    "typescript": "^5.3.3"
   }
 }
